Added styling to centralise tree

--- a/tree.html
+++ b/tree.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 	<title>Tree Decorator</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<svg width="420px" height="507px" viewBox="0 0 420 507">
-	    <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-	        <polygon id="Triangle" fill="#507E1A" points="210 0 330 120 90 120"></polygon>
-	        <polygon id="Triangle" fill="#507E1A" points="210 60 360 210 60 210"></polygon>
-	        <polygon id="Triangle" fill="#507E1A" points="210 135 390 315 30 315"></polygon>
-	        <polygon id="Triangle" fill="#507E1A" points="210 225 420 435 0 435"></polygon>
-	        <rect id="Rectangle" fill="#8B572A" x="180" y="435" width="60" height="72"></rect>
-	    </g>
-	</svg>
+	<div class="tree-container">
+		<svg width="420px" height="507px" viewBox="0 0 420 507">
+		    <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+		        <polygon id="Triangle" fill="#507E1A" points="210 0 330 120 90 120"></polygon>
+		        <polygon id="Triangle" fill="#507E1A" points="210 60 360 210 60 210"></polygon>
+		        <polygon id="Triangle" fill="#507E1A" points="210 135 390 315 30 315"></polygon>
+		        <polygon id="Triangle" fill="#507E1A" points="210 225 420 435 0 435"></polygon>
+		        <rect id="Rectangle" fill="#8B572A" x="180" y="435" width="60" height="72"></rect>
+		    </g>
+		</svg>
+	<div>
 </body>
 </html>
