Tweaked svg to add baubles

--- a/tree.html
+++ b/tree.html
@@ -19,15 +19,23 @@
 	<div class="tree-container">
 		<div class="tree">
 			<div class="topper"></div>
-			<svg width="420px" height="507px" viewBox="0 0 420 507">
-			    <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-			        <polygon id="Triangle" fill="#507E1A" points="210 0 330 120 90 120"></polygon>
-			        <polygon id="Triangle" fill="#507E1A" points="210 60 360 210 60 210"></polygon>
-			        <polygon id="Triangle" fill="#507E1A" points="210 135 390 315 30 315"></polygon>
-			        <polygon id="Triangle" fill="#507E1A" points="210 225 420 435 0 435"></polygon>
-			        <rect id="Rectangle" fill="#8B572A" x="180" y="435" width="60" height="72"></rect>
-			    </g>
-			</svg>
+				<svg width="452px" height="506px" viewBox="0 0 452 506">
+				    <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				        <polygon id="Triangle" fill="#507E1A" points="226 0 346 120 106 120"></polygon>
+				        <polygon id="Triangle" fill="#507E1A" points="226 60 376 210 76 210"></polygon>
+				        <polygon id="Triangle" fill="#507E1A" points="226 135 406 315 46 315"></polygon>
+				        <polygon id="Triangle" fill="#507E1A" points="226 225 436 435 16 435"></polygon>
+				        <rect id="Rectangle" fill="#8B572A" x="196" y="435" width="60" height="72"></rect>
+				        <circle id="Oval" fill="#D0021B" cx="346" cy="136" r="16"></circle>
+				        <circle id="Oval" fill="#D0021B" cx="46" cy="331" r="16"></circle>
+				        <circle id="Oval" fill="#D0021B" cx="106" cy="136" r="16"></circle>
+				        <circle id="Oval" fill="#D0021B" cx="74" cy="226" r="16"></circle>
+				        <circle id="Oval" fill="#D0021B" cx="376" cy="226" r="16"></circle>
+				        <circle id="Oval" fill="#D0021B" cx="406" cy="331" r="16"></circle>
+				        <circle id="Oval" fill="#D0021B" cx="16" cy="451" r="16"></circle>
+				        <circle id="Oval" fill="#D0021B" cx="436" cy="451" r="16"></circle>
+				    </g>
+				</svg>
 			<div class="present-container"></div>
 		</div>
 	</div>
