--- a/tree.html
+++ b/tree.html
@@ -150,6 +150,8 @@
 			            <use fill="var(--primary-colour)" fill-rule="evenodd" xlink:href="#path-25"></use>
 			            <use fill="black" fill-opacity="1" filter="url(#filter-26)" xlink:href="#path-25"></use>
 			        </g>
+			        <g id="lights-container">
+			        </g>
 			    </g>
 			</svg>
 		<div class="present-container"></div>
@@ -178,6 +180,7 @@
 			<p>Add a new decoration! Select one here, then click on the tree</p>
 			<select name="decorations" class="decorations">
 				<option value=""> </option>
+				<option value="light">light</option>
 				<option value="⛄">⛄</option>
 				<option value="🎅🏼">🎅🏼</option>
 				<option value="🌟">🌟</option>
@@ -219,16 +222,32 @@
 		const decSelector = document.querySelector('.decorations');
 		const tree = document.querySelector('.tree-container');
 		const triangles = document.querySelectorAll('#Triangle');
+		const lightsContainer = document.getElementById('lights-container');
 		function placeDecoration(e) {
 			if (decSelector.value !== "") {
-				const decoration = document.createElement('div');
-				decoration.textContent = decSelector.value;
-				decoration.classList.add('decoration');
-				decoration.setAttribute("style", `top: ${e.clientY - 15}px; left: ${e.clientX - 15}px;`);
-				tree.appendChild(decoration);
+				if (decSelector.value === "light") {			
+					const light = document.createElementNS("http://www.w3.org/2000/svg", 'circle');
+					light.classList.add("light");
+					light.setAttribute("cy", `${e.clientY - 32}`);
+					light.setAttribute("cx", `${e.clientX - 58}`);
+					light.setAttribute("r", "3");
+					lightsContainer.appendChild(light);
+				} else {
+					const decoration = document.createElement('div');
+					decoration.textContent = decSelector.value;
+					decoration.classList.add('decoration');
+					decoration.setAttribute("style", `top: ${e.clientY - 15}px; left: ${e.clientX - 15}px;`);
+					tree.appendChild(decoration);
+				}
 			}
 		}
 		triangles.forEach(triangle => triangle.addEventListener('click', placeDecoration));
+
+		function twinkle() {
+			lightsContainer.setAttribute('fill', `rgba(255,255,${Math.random()*255},${Math.random()*100})`);
+		}
+		setInterval(twinkle, 1000);
+		twinkle();
 	</script>
 </body>
 </html>
