--- a/tree.html
+++ b/tree.html
@@ -184,11 +184,14 @@
 				<option value="⛄">⛄</option>
 				<option value="🎅🏼">🎅🏼</option>
 				<option value="🌟">🌟</option>
+				<option value="🎀">🎀</option>
 				<option value="🕯️">🕯️</option>
 				<option value="🔔">🔔</option>
 				<option value="🎄">🎄</option>
 				<option value="❄️">❄️</option>
 				<option value="🎁">🎁</option>
+				<option value="🦌">🦌</option>
+				<option value="🛷">🛷</option>
 			</select>
 		</div>
 	</div>
@@ -228,7 +231,7 @@
 				if (decSelector.value === "light") {			
 					const light = document.createElementNS("http://www.w3.org/2000/svg", 'circle');
 					light.classList.add("light");
-					light.setAttribute("cy", `${e.clientY - 32}`);
+					light.setAttribute("cy", `${e.clientY - 82}`);
 					light.setAttribute("cx", `${e.clientX - 58}`);
 					light.setAttribute("r", "3");
 					lightsContainer.appendChild(light);
