--- a/tree.html
+++ b/tree.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<div class="tree-container">
+		<div class="snow-container"></div>
 		<div class="topper">⭐</div>
 			<svg width="452px" height="520px" viewBox="0 0 452 520" class="main-tree">
 			    <defs>
@@ -195,7 +196,7 @@
 			</select>
 		</div>
 		<div class="control">
-			<button id="snow">Let it snow</button>
+			<button id="snow-button">Let it snow! ❄️</button>
 		</div>
 	</div>
 	<style>
@@ -256,23 +257,32 @@
 		setInterval(twinkle, 1000);
 		twinkle();
 
-		const snowButton = document.getElementById('snow');
+		const snowButton = document.getElementById('snow-button');
+		const snowContainer = document.querySelector('.snow-container');
 		function letItSnow() {
-			function createFlake() {
-				let flake = document.createElement('div');
-				flake.classList.add('snowflake');
-				flake.style.top = '0px';
-				flake.style.left = `${(Math.random() * 552)}px`;
-				tree.insertBefore(flake, topper);
-				function snowfall() {
-					let topValue = window.getComputedStyle(flake).getPropertyValue('top');
-					flake.style.top = `${parseInt(topValue.slice(0, topValue.length-2), 10) + 1}px`;
+			if (!snowContainer.hasChildNodes()) {
+				function createFlake() {
+					let flake = document.createElement('div');
+					flake.classList.add('snowflake');
+					flake.style.top = '0px';
+					flake.style.left = `${(Math.random() * 452) + 50}px`;
+					snowContainer.appendChild(flake);
+					function snowfall() {
+						let topValue = window.getComputedStyle(flake).getPropertyValue('top');
+						flake.style.top = `${parseInt(topValue.slice(0, topValue.length-2), 10) + 1}px`;
+					}
+					setInterval(snowfall, (Math.random() * 100) + 50);
+					snowfall();
 				}
-				setInterval(snowfall, (Math.random() * 100) + 50);
-				snowfall();
+				setInterval(createFlake, (Math.random() * 2000) + 1000);
+				createFlake();
+				snowButton.textContent = "Oh no, it's snowing too much 🌨️";
+			} else {
+				while (snowContainer.hasChildNodes()) {
+					snowContainer.removeChild(snowContainer.lastChild);
+				}
+				snowButton.textContent = "Let it snow! ❄️";
 			}
-			setInterval(createFlake, Math.random() * 2000);
-			createFlake();
 		}
 		snowButton.addEventListener('click', letItSnow);
 	</script>
