--- a/tree.html
+++ b/tree.html
@@ -193,6 +193,7 @@
 				<option value="🎁">🎁</option>
 				<option value="🦌">🦌</option>
 				<option value="🛷">🛷</option>
+				<option value="tinsel">tinsel</option>
 			</select>
 		</div>
 		<div class="sound-effect-box">
@@ -240,7 +241,7 @@
 		const triangles = document.querySelectorAll('#Triangle');
 		let lightsContainer = document.getElementById('lights-container');
 		function placeDecoration(e) {
-			if (decSelector.value !== "") {
+			if (decSelector.value !== "" && decSelector.value !== "tinsel") {
 				if (decSelector.value === "light") {			
 					const light = document.createElementNS("http://www.w3.org/2000/svg", 'circle');
 					light.setAttribute("fill", "#FFFF00");
@@ -259,6 +260,26 @@
 			}
 		}
 		triangles.forEach(triangle => triangle.addEventListener('click', placeDecoration));
+
+		let startX = 0;
+		let startY = 0;
+		const mainTree = document.querySelector(".main-tree");
+		function startTinsel(e) {
+			if (decSelector.value === "tinsel") {
+				startX = e.clientX;
+				startY = e.clientY;
+			}
+		}
+		function endTinsel(e) {
+			if (decSelector.value === "tinsel") {
+				const tinsel = document.createElementNS("http://www.w3.org/2000/svg", 'path');
+				tinsel.classList.add("tinsel");
+				tinsel.setAttribute("d", `M ${startX - 58},${startY - 82} L ${e.clientX - 58},${e.clientY - 82}`);
+				mainTree.appendChild(tinsel);
+			}
+		}
+		triangles.forEach(triangle => triangle.addEventListener('mousedown', startTinsel));
+		triangles.forEach(triangle => triangle.addEventListener('mouseup', endTinsel));
 
 		function twinkle() {
 			if (lightsContainer.hasChildNodes()) {
